--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@testing-library/react": "^12.1.4",
         "@testing-library/user-event": "^13.5.0",
         "@usedapp/core": "^0.12.3",
+        "@web3-react/core": "^6.1.9",
         "@web3-react/injected-connector": "^6.0.7",
         "axios": "^0.26.1",
         "bootstrap": "^5.1.3",
