--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "course_management",
+    "name": "consent_management",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
@@ -21,7 +21,6 @@
         "axios": "^0.26.1",
         "bootstrap": "^5.1.3",
         "ethers": "^5.6.2",
-        "material-ui-icons": "^1.0.0-beta.36",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.8",
