--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "bootstrap": "^5.1.3",
         "ethers": "^5.6.2",
         "react": "^17.0.2",
+        "react-datepicker": "^4.7.0",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.8",
         "react-router-dom": "^6.3.0",
