--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "axios": "^0.26.1",
         "bootstrap": "^5.1.3",
         "ethers": "^5.6.2",
+        "lodash": "^4.17.21",
+        "mui-datatables": "^4.2.2",
         "react": "^17.0.2",
         "react-datepicker": "^4.7.0",
         "react-dom": "^17.0.2",
