--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_OWNERADDRESS=0x16A86133196110F3DDEbc5385f966352849eB88d
+REACT_APP_CONTRACTADDRESS=0xE0a2727911c001889C60C0455DaAc525D2A39d5e
