--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.0",
         "react-toastify": "^8.2.0",
+        "react-usestateref": "^1.0.8",
         "reactstrap": "^9.0.1",
         "redux": "^4.1.2",
         "redux-persist": "^6.0.0",
