Added a New Landing Page and Login Modal for UI/UX

--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+    "proxy": "http://localhost:3000",
+    "homepage": ".",
     "name": "consent_management",
     "version": "0.1.0",
     "private": true,
