--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
         "@testing-library/jest-dom": "^5.16.3",
         "@testing-library/react": "^12.1.4",
         "@testing-library/user-event": "^13.5.0",
+        "@truffle/hdwallet-provider": "^2.1.10",
         "@web3-react/core": "^6.1.9",
         "@web3-react/injected-connector": "^6.0.7",
         "axios": "^0.26.1",
         "bootstrap": "^5.1.3",
         "ethers": "^5.6.2",
+        "fs": "^0.0.1-security",
         "lodash": "^4.17.21",
         "mui-datatables": "^4.2.2",
         "react": "^17.0.2",
